--- a/html/assets/library.css
+++ b/html/assets/library.css
@@ -12,7 +12,7 @@ a.external {color: #0088cc; background: transparent; border: none; padding: 0;}
 h1, h2, p, pre {margin: 1.4rem auto; line-height: 1.4; text-shadow: 0 1px 0 rgba(255,255,255,0.6);}
 h1 {line-height: 1.2;}
 h2 {}
-pre, code {
+pre, code, pre.code.rebol {
 	color: black;
 	background: rgba(153,153,153,0.3);
 	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.08) inset, 0 0 40px rgba(0, 0, 0, 0.08) inset;
@@ -20,6 +20,7 @@ pre, code {
 	border: none;
 	font-family: "Ubuntu Mono","Monaco","Menlo","Consolas","Courier New",monospace;
 	text-shadow: 0 1px 0 rgba(255,255,255,0.3);
+	border: none; padding: 0.4em 0.8em;
 }
 blockquote {
 	border-left-color: rgba(0,0,0,0.2);
