--- a/html/assets/library.css
+++ b/html/assets/library.css
@@ -1,27 +1,35 @@
 
-@import url('//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css');
-@import url('http://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700');
-/*@import url('http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic|Open+Sans:800');*/
-
-body {background: url("squairy_light.png"); background-size: 200px 200px;} /* image courtesy of subtlepatterns.com */
-a {color: black; background: rgba(255,255,255,0.3); border: 1px solid rgba(0,0,0,0.1); padding: 0.2em 0.4em; border-radius: 0.2em;}
-a.external {color: #0088cc; background: transparent; border: none; padding: 0;}
-.container {max-width: 800px}
+body {background: #ddb url("squairy_light.png"); background-color: #e9e6da; background-size: 200px 200px;} /* image courtesy of subtlepatterns.com */
+/*a {color: black; background: rgba(255,255,255,0.3); border: 1px solid rgba(0,0,0,0.1); padding: 0.2em 0.4em; border-radius: 0.2em;}*/
+/*a.external {color: #0088cc; background: transparent; border: none; padding: 0;}*/
+.jumbotron {background: #555; background: rgba(0,0,0,0.1);}
+/*.container {max-width: 800px}*/
 .logo {text-align: right;}
 .page-header {margin-bottom: -2em; border-bottom: none;}
 h1, h2, p, pre {margin: 1.4rem auto; line-height: 1.4; text-shadow: 0 1px 0 rgba(255,255,255,0.6);}
 h1 {line-height: 1.2;}
 h2 {}
 pre, code, pre.code.rebol {
-	color: black;
-	background: rgba(153,153,153,0.3);
-	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.08) inset, 0 0 40px rgba(0, 0, 0, 0.08) inset;
+	color: #333;
+	background: #ffe url('squairy_light.png');
+	background-color: #f9f8f2;
+	box-shadow: inset 0 0 2px rgba(0,0,0,0.6), inset 0 0 3px rgba(255,255,255,1), inset 0 0 3px rgba(255,255,255,1), 1px 1px 5px rgba(0,0,0,0.2);
 /*	border-color: rgba(0,0,0,0.03);*/
 	border: none;
 	font-family: "Ubuntu Mono","Monaco","Menlo","Consolas","Courier New",monospace;
-	text-shadow: 0 1px 0 rgba(255,255,255,0.3);
+	text-shadow: 0 -1px 0 rgba(255,255,255,0.3);
 	border: none; padding: 0.4em 0.8em;
 }
+
+pre, pre.code.rebol {
+	padding: 1.2em 1.2em 1em;
+	border-radius: 3px;
+}
+
+pre span, pre.code.rebol span {
+	opacity: 0.9;
+}
+
 blockquote {
 	border-left-color: rgba(0,0,0,0.2);
 }
