--- a/html/assets/library.css
+++ b/html/assets/library.css
@@ -13,11 +13,11 @@ pre, code, pre.code.rebol {
 	color: #333;
 	background: #ffe url('squairy_light.png');
 	background-color: #f9f8f2;
-	box-shadow: inset 0 0 2px rgba(0,0,0,0.6), inset 0 0 3px rgba(255,255,255,1), inset 0 0 3px rgba(255,255,255,1), 1px 1px 5px rgba(0,0,0,0.2);
+	box-shadow: inset 0 0 2px rgba(0,0,0,0.9), inset 0 0 3px white, inset 0 0 3px white, 1px 1px 5px rgba(0,0,0,0.2);
 /*	border-color: rgba(0,0,0,0.03);*/
 	border: none;
 	font-family: "Ubuntu Mono","Monaco","Menlo","Consolas","Courier New",monospace;
-	text-shadow: 0 -1px 0 rgba(255,255,255,0.3);
+	text-shadow: 0 1px 0 rgba(255,255,255,0.8);
 	border: none; padding: 0.4em 0.8em;
 }
 
