--- a/html/assets/library.css
+++ b/html/assets/library.css
@@ -9,7 +9,7 @@ body {background: #ddb url("squairy_light.png"); background-color: #e9e6da; back
 h1, h2, p, pre {margin: 1.4rem auto; line-height: 1.4; text-shadow: 0 1px 0 rgba(255,255,255,0.6);}
 h1 {line-height: 1.2;}
 h2 {}
-div.document, pre, code, pre.code.rebol, .breadcrumb {
+div.documentation, pre, code, pre.code.rebol, .breadcrumb {
 	color: #333;
 	background: #ffe url('squairy_light.png');
 	background-color: #f9f8f2;
@@ -23,7 +23,7 @@ div.document, pre, code, pre.code.rebol, .breadcrumb {
 /*	background: none;*/
 }
 
-div.document, pre, code, pre.code.rebol {
+div.documentation, pre, code, pre.code.rebol {
 	box-shadow: inset 0 0 2px rgba(0,0,0,0.9), inset 0 0 3px white, inset 0 0 3px white, 1px 1px 5px rgba(0,0,0,0.2);
 }
 
@@ -41,9 +41,9 @@ pre span, pre.code.rebol span {
 	opacity: 0.9;
 }
 
-div.document div.container {width: auto;}
+div.documentation div.container {width: auto;}
 
-div.document div pre {background: rgba(255,255,255,0.3);}
+div.documentation div pre {background: rgba(255,255,255,0.3);}
 
 blockquote {
 	border-left-color: rgba(0,0,0,0.2);
